// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VimeoPlayer Player should render correctly 1`] = `
<DocumentFragment>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://player.vimeo.com/video/123456?dnt=1&autoplay=0&muted=0&loop=0"
  />
</DocumentFragment>
`;

exports[`VimeoPlayer Player should render correctly with autoplay 1`] = `
<DocumentFragment>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://player.vimeo.com/video/123456?dnt=1&autoplay=1&muted=0&loop=0"
  />
</DocumentFragment>
`;

exports[`VimeoPlayer Player should render correctly with muted 1`] = `
<DocumentFragment>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://player.vimeo.com/video/123456?dnt=1&autoplay=0&muted=1&loop=0"
  />
</DocumentFragment>
`;

exports[`VimeoPlayer Player should render correctly with title 1`] = `
<DocumentFragment>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://player.vimeo.com/video/123456?dnt=1&autoplay=0&muted=0&loop=0"
    title="Sample Video Title"
  />
</DocumentFragment>
`;
